# Generated by Django 6.0.1 on 2026-04-07 15:45

import django.core.validators
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Cliente',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('rol_contacto', models.CharField(choices=[('propietario', 'Propietario'), ('representante', 'Representante'), ('gerente', 'Gerente'), ('presidente_zona', 'Presidente de Zona'), ('encargado', 'Encargado')], default='propietario', max_length=50, verbose_name='Rol de Contacto')),
                ('nit_ci', models.CharField(blank=True, default='', max_length=20, verbose_name='NIT/CI')),
                ('nombre', models.CharField(max_length=50, verbose_name='Nombres')),
                ('apellido_paterno', models.CharField(max_length=50, verbose_name='Apellido Paterno')),
                ('apellido_materno', models.CharField(blank=True, default='', max_length=50, verbose_name='Apellido Materno')),
                ('telefono', models.CharField(max_length=15, verbose_name='Número de Teléfono')),
                ('correo', models.EmailField(blank=True, max_length=100, null=True, verbose_name='Correo Electrónico')),
                ('direccion', models.CharField(max_length=255, verbose_name='Dirección')),
                ('tipo_contratante', models.CharField(choices=[('empresa', 'Empresa'), ('personal', 'Personal'), ('entidad_publica', 'Entidad Pública')], default='personal', max_length=20, verbose_name='Tipo Contratante')),
                ('nombre_entidad', models.CharField(blank=True, max_length=200, null=True, verbose_name='Nombre de la Entidad')),
                ('representante_legal', models.CharField(blank=True, max_length=200, null=True, verbose_name='Representante Legal')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
            ],
            options={
                'verbose_name': 'Cliente',
                'verbose_name_plural': 'Clientes',
            },
        ),
        migrations.CreateModel(
            name='PlantillaTarea',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('nombre', models.CharField(max_length=200, verbose_name='Nombre de la plantilla')),
                ('tipo', models.CharField(choices=[('camara_ip', 'Cámara IP'), ('camara_analogica', 'Cámara Analógica'), ('dvr_nvr', 'DVR / NVR'), ('alarma', 'Sistema de Alarma'), ('sensor', 'Sensores'), ('otro', 'Otro')], max_length=20, verbose_name='Tipo de instalación')),
                ('descripcion', models.TextField(blank=True, verbose_name='Descripción')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
            ],
            options={
                'verbose_name': 'Plantilla de Tareas',
                'verbose_name_plural': 'Plantillas de Tareas',
                'ordering': ['tipo', 'nombre'],
            },
        ),
        migrations.CreateModel(
            name='ItemPlantilla',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('descripcion', models.CharField(max_length=255, verbose_name='Tarea')),
                ('orden', models.PositiveSmallIntegerField(default=1, verbose_name='Orden')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
                ('plantilla', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='projects.plantillatarea', verbose_name='Plantilla')),
            ],
            options={
                'verbose_name': 'Item de Plantilla',
                'verbose_name_plural': 'Items de Plantilla',
                'ordering': ['orden'],
            },
        ),
        migrations.CreateModel(
            name='Proyecto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('codigo', models.CharField(max_length=20, unique=True, verbose_name='Código Proyecto')),
                ('nombre', models.CharField(max_length=200, unique=True, verbose_name='Nombre Proyecto')),
                ('descripcion', models.TextField(blank=True, verbose_name='Descripción Proyecto')),
                ('estado_proyecto', models.CharField(choices=[('pendiente', 'Pendiente'), ('en_progreso', 'En Progreso'), ('completado', 'Completado')], db_index=True, default='pendiente', max_length=20, verbose_name='Estado Proyecto')),
                ('tipo_proyecto', models.CharField(choices=[('instalacion_nueva', 'Instalación Nueva'), ('ampliacion', 'Ampliación'), ('mantenimiento_garantia', 'Mantenimiento (Garantía)'), ('mantenimiento_externo', 'Mantenimiento Externo'), ('emergencia', 'Emergencia')], db_index=True, default='instalacion_nueva', max_length=30, verbose_name='Tipo Proyecto')),
                ('fecha_inicio', models.DateField(blank=True, null=True, verbose_name='Fecha de Inicio')),
                ('fecha_fin', models.DateField(blank=True, null=True, verbose_name='Fecha de Finalización')),
                ('observacion', models.TextField(blank=True, default='', verbose_name='Observación')),
                ('estado_pago', models.CharField(choices=[('no_pagado', 'No Pagado'), ('parcial', 'Pago Parcial'), ('pagado', 'Pago Completo')], db_index=True, default='no_pagado', max_length=20, verbose_name='Estado de Pago')),
                ('monto_total', models.DecimalField(decimal_places=2, default=0, max_digits=12, verbose_name='Monto Total del Proyecto')),
                ('ritmo_semanal', models.PositiveSmallIntegerField(default=4, help_text='Promedio de unidades de instalación completadas por semana (ej: 4 cámaras/semana).', verbose_name='Ritmo esperado (grupos/semana)')),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='projects.cliente', verbose_name='Contratista')),
                ('creado_por', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL, verbose_name='Creado por')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
                ('equipo', models.ManyToManyField(blank=True, related_name='proyectos_asignados', to=settings.AUTH_USER_MODEL, verbose_name='Equipo del Proyecto')),
                ('proyecto_origen', models.ForeignKey(blank=True, limit_choices_to={'activo': True, 'tipo_proyecto': 'instalacion_nueva'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='proyectos_garantia', to='projects.proyecto', verbose_name='Proyecto de Origen (Garantía)')),
            ],
            options={
                'verbose_name': 'Proyecto',
                'verbose_name_plural': 'Proyectos',
                'db_table': 'projects_project',
            },
        ),
        migrations.CreateModel(
            name='Progreso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('fecha', models.DateField(verbose_name='Fecha')),
                ('porcentaje', models.PositiveIntegerField(validators=[django.core.validators.MinValueValidator(0), django.core.validators.MaxValueValidator(100)], verbose_name='Porcentaje (%)')),
                ('descripcion', models.CharField(max_length=255, verbose_name='Descripción')),
                ('observacion', models.TextField(blank=True, verbose_name='Observación')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
                ('proyecto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='progresos', to='projects.proyecto', verbose_name='Proyecto')),
            ],
            options={
                'verbose_name': 'Progreso',
                'verbose_name_plural': 'Progresos',
                'ordering': ['-fecha', '-created'],
            },
        ),
        migrations.CreateModel(
            name='PagoProyecto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('monto', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Monto recibido (Bs.)')),
                ('descuento', models.DecimalField(decimal_places=2, default=0, max_digits=12, verbose_name='Descuento / Multa aplicada (Bs.)')),
                ('motivo_descuento', models.CharField(blank=True, default='', max_length=300, verbose_name='Motivo del descuento')),
                ('fecha', models.DateField(db_index=True, verbose_name='Fecha de Pago')),
                ('tipo_pago', models.CharField(choices=[('efectivo', 'Efectivo'), ('transferencia', 'Transferencia')], default='efectivo', max_length=15, verbose_name='Método de Pago')),
                ('numero_referencia', models.CharField(blank=True, default='', max_length=100, verbose_name='N° Referencia / Comprobante')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
                ('proyecto', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='pagos', to='projects.proyecto', verbose_name='Proyecto')),
            ],
            options={
                'verbose_name_plural': 'Pagos',
                'db_table': 'projects_pagoproyecto',
                'ordering': ['-fecha'],
            },
        ),
        migrations.CreateModel(
            name='HistorialPresupuesto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_modificacion', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Modificación')),
                ('monto_anterior', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Monto Anterior')),
                ('monto_actual', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Monto Actual')),
                ('motivo_cambio', models.TextField(verbose_name='Motivo del Cambio')),
                ('modificado_por', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Modificado por')),
                ('proyecto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='historial_presupuesto', to='projects.proyecto', verbose_name='Proyecto')),
            ],
            options={
                'verbose_name': 'Historial Presupuesto',
                'verbose_name_plural': 'Historiales de Presupuesto',
                'db_table': 'projects_historialpresupuesto',
            },
        ),
        migrations.CreateModel(
            name='Sede',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('nombre', models.CharField(max_length=200, verbose_name='Referencia del lugar')),
                ('direccion', models.CharField(max_length=500, verbose_name='Dirección')),
                ('descripcion', models.TextField(blank=True, verbose_name='Descripción / Indicaciones')),
                ('latitud', models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, verbose_name='Latitud')),
                ('longitud', models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, verbose_name='Longitud')),
                ('estado', models.CharField(choices=[('pendiente', 'Pendiente'), ('en_progreso', 'En Progreso'), ('completado', 'Completado')], default='pendiente', max_length=15, verbose_name='Estado')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
                ('plantilla', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to='projects.plantillatarea', verbose_name='Plantilla de tareas')),
                ('proyecto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='sedes', to='projects.proyecto', verbose_name='Proyecto')),
            ],
            options={
                'verbose_name': 'Sede de Instalación',
                'verbose_name_plural': 'Sedes de Instalación',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Notificacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('sede_completada', 'Sede completada'), ('tarea_completada', 'Tarea completada'), ('general', 'General')], default='general', max_length=20, verbose_name='Tipo')),
                ('mensaje', models.TextField(verbose_name='Mensaje')),
                ('leida', models.BooleanField(db_index=True, default=False, verbose_name='Leída')),
                ('fecha', models.DateTimeField(auto_now_add=True, verbose_name='Fecha')),
                ('destinatario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notificaciones', to=settings.AUTH_USER_MODEL, verbose_name='Destinatario')),
                ('proyecto', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='+', to='projects.proyecto', verbose_name='Proyecto')),
                ('sede', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='+', to='projects.sede', verbose_name='Sede')),
            ],
            options={
                'verbose_name': 'Notificación',
                'verbose_name_plural': 'Notificaciones',
                'ordering': ['-fecha'],
            },
        ),
        migrations.CreateModel(
            name='GrupoTarea',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('nombre', models.CharField(max_length=200, verbose_name='Nombre')),
                ('tipo', models.CharField(choices=[('camara_ip', 'Cámara IP'), ('camara_analogica', 'Cámara Analógica'), ('dvr_nvr', 'DVR / NVR'), ('alarma', 'Sistema de Alarma'), ('sensor', 'Sensor'), ('fibra', 'Fibra Óptica'), ('otro', 'Otro')], max_length=20, verbose_name='Tipo')),
                ('orden', models.PositiveSmallIntegerField(default=1, verbose_name='Orden')),
                ('fecha_completado', models.DateTimeField(blank=True, null=True, verbose_name='Fecha completado')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
                ('sede', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='grupos', to='projects.sede', verbose_name='Sede')),
            ],
            options={
                'verbose_name': 'Grupo de Instalación',
                'verbose_name_plural': 'Grupos de Instalación',
                'ordering': ['orden', 'created'],
            },
        ),
        migrations.CreateModel(
            name='FotoSede',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('foto', models.ImageField(upload_to='sedes/fotos/', verbose_name='Foto')),
                ('descripcion', models.CharField(blank=True, max_length=255, verbose_name='Descripción')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
                ('subida_por', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Subida por')),
                ('sede', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='fotos', to='projects.sede', verbose_name='Sede')),
            ],
            options={
                'verbose_name': 'Foto de Sede',
                'verbose_name_plural': 'Fotos de Sede',
                'ordering': ['-created'],
            },
        ),
        migrations.CreateModel(
            name='TareaChecklist',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(db_index=True, default=True, verbose_name='Activo')),
                ('descripcion', models.CharField(max_length=255, verbose_name='Tarea')),
                ('orden', models.PositiveSmallIntegerField(default=0, verbose_name='Orden')),
                ('completado', models.BooleanField(default=False, verbose_name='Completado')),
                ('fecha_completado', models.DateTimeField(blank=True, null=True, verbose_name='Fecha completado')),
                ('completado_por', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Completado por')),
                ('deleted_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL, verbose_name='Eliminado por')),
                ('grupo', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='tareas', to='projects.grupotarea', verbose_name='Grupo de instalación')),
                ('sede', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='tareas', to='projects.sede', verbose_name='Sede')),
            ],
            options={
                'verbose_name': 'Tarea Checklist',
                'verbose_name_plural': 'Tareas Checklist',
                'ordering': ['orden', 'created'],
            },
        ),
        migrations.AddConstraint(
            model_name='cliente',
            constraint=models.UniqueConstraint(condition=models.Q(('activo', True), models.Q(('nit_ci', ''), _negated=True)), fields=('nit_ci',), name='unique_nit_ci_activo_when_not_empty'),
        ),
        migrations.AddConstraint(
            model_name='proyecto',
            constraint=models.CheckConstraint(condition=models.Q(('fecha_fin__isnull', True), ('fecha_inicio__isnull', True), ('fecha_fin__gte', models.F('fecha_inicio')), _connector='OR'), name='proyecto_fecha_fin_gte_inicio'),
        ),
        migrations.AddConstraint(
            model_name='proyecto',
            constraint=models.CheckConstraint(condition=models.Q(('monto_total__gte', 0)), name='proyecto_monto_total_no_negativo'),
        ),
        migrations.AddConstraint(
            model_name='pagoproyecto',
            constraint=models.CheckConstraint(condition=models.Q(('monto__gt', 0)), name='pago_monto_positivo'),
        ),
        migrations.AddConstraint(
            model_name='pagoproyecto',
            constraint=models.CheckConstraint(condition=models.Q(('descuento__gte', 0)), name='pago_descuento_no_negativo'),
        ),
        migrations.AddConstraint(
            model_name='notificacion',
            constraint=models.CheckConstraint(condition=models.Q(models.Q(('tipo', 'sede_completada'), _negated=True), ('sede__isnull', False), _connector='OR'), name='notificacion_sede_requerida_si_tipo_sede'),
        ),
        migrations.AddConstraint(
            model_name='tareachecklist',
            constraint=models.CheckConstraint(condition=models.Q(models.Q(('completado', True), _negated=True), ('completado_por__isnull', False), _connector='OR'), name='tarea_completado_por_requerido_si_completado'),
        ),
    ]
